src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__assignment_3d.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E043]: Too many initial values for array `arr`. Expected 8, found 9.
  ┌─ <internal>:4:66
  │
4 │                 arr         : ARRAY[1..2, 1..2, 1..2] OF DINT := [1, 2, 3, 4, 5, 6, 7, 8, 9];
  │                                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Too many initial values for array `arr`. Expected 8, found 9.

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:5:67
  │
5 │                 arr_alt     : ARRAY[1..2, 1..2, 1..2] OF DINT := (1, 2, 3, 4, 5, 6, 7, 8, 9);
  │                                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Too many initial values for array `arr_nested`. Expected 8, found 12.
  ┌─ <internal>:7:88
  │
7 │                 arr_nested      : ARRAY[1..2] OF ARRAY[1..2] OF ARRAY[1..2] OF DINT := [ [[1, 2], [3, 4]], [[5, 6], [7, 8]], [[9, 10], [11, 12]] ];
  │                                                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Too many initial values for array `arr_nested`. Expected 8, found 12.

error[E043]: Array assignments must be surrounded with `[]`
  ┌─ <internal>:8:90
  │
8 │                 arr_nested_alt  : ARRAY[1..2] OF ARRAY[1..2] OF ARRAY[1..2] OF DINT := ( [[1, 2], [3, 4]], [[5, 6], [7, 8]], [[9, 10], [11, 12]] );
  │                                                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

warning[E127]: Fewer initial values for array `arr` than expected. Expected 8, found 7.
   ┌─ <internal>:11:20
   │
11 │             arr := [1, 2, 3, 4, 5, 6, 7];       // Valid
   │                    ^^^^^^^^^^^^^^^^^^^^^ Fewer initial values for array `arr` than expected. Expected 8, found 7.

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:14:21
   │
14 │             arr := (1, 2, 3, 4, 5, 6, 7, 8);
   │                     ^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:15:21
   │
15 │             arr := (1, 2, 3, 4, 5, 6, 7, 8, 9);
   │                     ^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`

error[E043]: Too many initial values for array `arr`. Expected 8, found 9.
   ┌─ <internal>:16:20
   │
16 │             arr := [1, 2, 3, 4, 5, 6, 7, 8, 9];
   │                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Too many initial values for array `arr`. Expected 8, found 9.

error[E043]: Too many initial values for array `arr_nested`. Expected 8, found 12.
   ┌─ <internal>:19:27
   │
19 │             arr_nested := [ [[1, 2], [3, 4]], [[5, 6], [7, 8]], [[9, 10], [11, 12]] ];
   │                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Too many initial values for array `arr_nested`. Expected 8, found 12.

error[E043]: Array assignments must be surrounded with `[]`
   ┌─ <internal>:20:29
   │
20 │             arr_nested := ( [[1, 2], [3, 4]], [[5, 6], [7, 8]], [[9, 10], [11, 12]] );
   │                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Array assignments must be surrounded with `[]`
